--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>algafood-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>algafood-api</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Spring REST training course</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -44,6 +44,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 	</dependencies>
 
