--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=algafood-api
+spring.datasource.url=jdbc:mysql://localhost:3306/algafood
+spring.datasource.username=root
+spring.datasource.password=
