--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=algafood-api
 spring.datasource.url=jdbc:mysql://localhost:3306/algafood
 spring.datasource.username=root
 spring.datasource.password=
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
